# ot-harjoitustyo

./: .gitignore  README.md
python-app/: .coveragerc  pyproject.toml  tasks.py
python-app/dokumentaatio/: Tuntikirjanpito.md  Vaatimusmäärittely.md  arkkitehtuuri.md  changelog.md  käyttöohje.md  testausdokumentti.md
python-app/src/: app.py  main.py
python-app/src/data/categories/: movements.json
python-app/src/data/users/: esimerkki.json  masa.json  matti12.json  mrbean.json  mrbean1.json  savetest.json  testi.json
python-app/src/data/workouts/: esimerkki_2024-04-27_23-21-20.json  esimerkki_2024-04-27_23-21-22.json  esimerkki_2024-04-27_23-21-54.json  esimerkki_2024-04-27_23-22-19.json  esimerkki_2024-04-27_23-22-45.json  esimerkki_2024-04-27_23-23-32.json  esimerkki_2024-04-27_23-24-05.json  esimerkki_2024-04-27_23-24-40.json  esimerkki_2024-04-27_23-25-09.json  esimerkki_2024-04-27_23-25-25.json  esimerkki_2024-04-27_23-26-05.json  esimerkki_2024-04-27_23-26-30.json  esimerkki_2024-04-28_00-47-00.json  esimerkki_2024-04-29_01-01-14.json  esimerkki_2024-04-29_01-01-19.json  masa_2024-04-14.json  masa_2024-04-14_21-17-54.json  masa_2024-04-14_21-19-49.json  mrbean_2024-04-14.json  (+4 more)
python-app/src/event_handlers/: json_manager.py  login_handler.py  session_manager.py
python-app/src/gui/: __init__.py  login_view.py  main_view.py  pillar_chart.py  signup_view.py  workout_element.py  workout_view.py
python-app/src/objects/: __init__.py  user.py  workout.py
python-app/src/tests/: json_manager_test.py  login_handler_test.py  session_manager_test.py
(+6 files in other folders)
