[tool.poetry]
name = "python-app"
version = "0.1.0"
description = ""
authors = ["Karri6 <karri.pajarinen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^7.4.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
